# ft_linear_regression

./: pyproject.toml  requirements.txt
linear_regression/: __init__.py  example_animation.py  model_v2.py  parameters.ini  plot.py  solver.py  train.py  train_model.py
tests/: test_linear_regression.py
