[tool.poetry]
name = "linear_regression"
version = "0.1.0"
description = ""
authors = ["Pablo Abril <pablo.abril@cybelangel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
